--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,10 @@
         "browser": true,
         "es2021": true
     },
-    "extends": "airbnb-base",
+    "extends": [
+        "standard-with-typescript",
+        "plugin:prettier/recommended"
+        ],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
